tests/machine/x/ocaml/test_block.error
File "/tmp/testblock.ml", line 6, characters 2-15:
6 |   print_endline ("ok");
      ^^^^^^^^^^^^^
Error: Syntax error
