tests/machine/x/ocaml/test_block.ml
(* Generated by Mochi compiler v0.10.28 on 2025-07-18T08:14:38Z *)

let () =
  let x : int = (1 + 2) in
  assert ((x = 3))
  print_endline ("ok");
